{
    "name": "GameInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "a923726b-61b3-4abf-9925-2cc73fb7d789",
            "actions": [
                {
                    "name": "TilePointed",
                    "type": "Value",
                    "id": "a4ce145e-f2ab-4ef8-aad0-a860b6a49956",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TileClick",
                    "type": "Button",
                    "id": "2e7abbba-b3fe-4500-8ec4-1f7578834c12",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d64884f8-f97a-402d-9a23-461cf0b20a1a",
                    "path": "<Pointer>/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TilePointed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c5169b8-6776-4590-897c-b9a80419c816",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TileClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}